--- a/coffee-shop-locator/styles/Hero.module.css
+++ b/coffee-shop-locator/styles/Hero.module.css
@@ -6,6 +6,7 @@
     position: relative;
     justify-content: center;
     box-shadow: 1px 1px 5px 1px rgba(63, 51, 34, 0.219);
+    margin-bottom: 3rem;
 }
 
 .heroImage {
@@ -47,3 +48,31 @@
     color: var(--color-4);
     transition: background-color .2s, color .2s;
 }
+
+@media (max-width: 640px) {
+    .outerContainer {
+        height: 40vh
+    }
+
+    .heroText {
+        padding: 1rem;
+    }
+
+    .title {
+        font-size: 2.5rem;
+    }
+
+    .button {
+        font-size: 1rem;
+    }
+  }
+  
+  @media (max-width: 1100px) {
+    .outerContainer {
+        height: 40vh
+    }
+
+    .heroText {
+        padding: 1rem;
+    }
+  }
