--- a/coffee-shop-locator/styles/Home.module.css
+++ b/coffee-shop-locator/styles/Home.module.css
@@ -4,3 +4,27 @@
   display: flex;
   flex-direction: column;
 }
+
+.cardLayout {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  column-gap: 1.5rem;
+  row-gap: 1.5rem;
+}
+
+.card {
+  justify-content: center;
+  display: flex;
+}
+
+@media (min-width: 640px) {
+  .cardLayout {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1100px) {
+  .cardLayout {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
