--- a/coffee-shop-locator/styles/CoffeeCard.module.css
+++ b/coffee-shop-locator/styles/CoffeeCard.module.css
@@ -1,6 +1,7 @@
 .cardContainer {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 310px;
     margin: 1rem;
     padding: 1rem;
