--- a/coffee-shop-locator/styles/CoffeeCard.module.css
+++ b/coffee-shop-locator/styles/CoffeeCard.module.css
@@ -2,13 +2,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 310px;
-    margin: 1rem;
-    padding: 1rem;
-    background: rgba(255, 255, 255, 0.137);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 8.5px );
-    -webkit-backdrop-filter: blur( 8.5px );
+    align-items: center;
+    width: 320px;
+    background: var(--color-1);
     border-radius: 2px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     transition: opacity .5s;
@@ -16,7 +12,7 @@
 
 .link {
     text-decoration: none;
-    color: var(--color-2);
+    color: var(--color-4);
     cursor: pointer;
     display: inline;
 }
@@ -25,10 +21,16 @@
     opacity: .9;
     transition: opacity .5s;
 }
+/* 
+.cardImage {
+    padding: 1rem 0;
+    margin: 1rem 0;
+} */
 
 .h3 {
     text-align: center;
     display: block;
-    margin-bottom: 1rem;
-    color: var(--color-1)
+    color: var(--color-3);
+    font-weight: 400;
+    padding: .25rem;
 }
