--- a/coffee-shop-locator/styles/Home.module.css
+++ b/coffee-shop-locator/styles/Home.module.css
@@ -22,6 +22,7 @@
   display: block;
   text-align: center;
   font-family: var(--heading-text);
+  padding: 2rem 0;
 }
 
 @media (min-width: 640px) {
