--- a/coffee-shop-locator/styles/globals.css
+++ b/coffee-shop-locator/styles/globals.css
@@ -71,3 +71,8 @@ p {
   font-weight: 700;
   src: url(/fonts/OpenSans-Bold.ttf) format('truetype')
 }
+
+a {
+  text-decoration: none;
+  color: var(--color-1)
+}
